--- a/index.html
+++ b/index.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Gerenciador de Tarefas</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="bg-blur"></div>
+    <div class="area">
+      <ul class="circles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+
+    <div class="container-main">
+      <div class="container">
         <h1>📋 Minhas Tarefas</h1>
-
         <form id="form-tarefa">
-            <input type="text" id="titulo" placeholder="Nova tarefa..." required>
-            <button type="submit">Adicionar</button>
+          <input
+            type="text"
+            id="titulo"
+            placeholder="Nova tarefa..."
+            required
+          />
+          <button type="submit">Adicionar</button>
         </form>
-
         <ul id="lista-tarefas"></ul>
+      </div>
     </div>
 
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
